2019-1/231/users/4227/executions/1810_2572.log
== TEST (2019-06-13 00:46:03) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	if (m[i]%2 != 0):
		x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:46:39) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	if (m[i]%2 != 0):
		x[i] = m[i]
print(x)

-- EXECUTION TIME:
0.917204
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[0]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:47:03) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	if (m[i]%2 != 0):
		x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:47:13) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	if (m[i]%2 != 0):
		x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:47:26) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	if (m[i]%2 != 0):
		x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:52:05) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
	if (m[i]%2 != 0):
		x[i] = m[i]
print(x)

-- ERROR:
File "XXXX", line 8
    if (m[i]%2 != 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:52:31) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
if (m[i]%2 != 0):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:42:09) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
if (m[i]%2 != 0):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:45:04) 
-- CODE:
from numpy import*
m = array(eval(input("")))
for i in range(size(m)):
	k = 0
	if (m[i]%2 != 0):
		k = k + 1
print(k)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:45:29) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
print(k)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:45:35) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
print(k)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:46:11) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
for i in range(k):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:47:10) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:47:13) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:47:21) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:47:57) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:47:57) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1
x = zeros(k, dtype=int)
for i in range(k):
	x[i] = m[i]
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:18:06) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1		
	x = zeros(k, dtype=int)
for i in range(size(m)):
	if (m[i]%2 != 0):
		x[i] = m[i]
print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:18:34) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1		
	x = zeros(k, dtype=int)
for i in range(size(m)):
	if (m[i]%2 != 0):
		m[i] = x[i]
print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:18:55) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0 
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1		
for i in range(size(m)):
	x = zeros(k, dtype=int)
	if (m[i]%2 != 0):
		m[i] = x[i]
print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:29:21) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0
j = 0
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1		
	x = zeros(k, dtype=int)
for i in range(size(m)):
	if (m[i]%2 != 0):
		x[j] = x[j] + m[i]
		j = j + 1
print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:29:32) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0
j = 0
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1		
	x = zeros(k, dtype=int)
for i in range(size(m)):
	if (m[i]%2 != 0):
		x[j] = x[j] + m[i]
		j = j + 1
print(x)
		

-- EXECUTION TIME:
1.14013
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:35:42) 
-- CODE:
from numpy import*
m = array(eval(input("")))
k = 0
j = 0
for i in range(size(m)):
	if (m[i]%2 != 0):
		k = k + 1		
	x = zeros(k, dtype=int)
for i in range(size(m)):
	if (m[i]%2 != 0):
		x[j] = x[j] + m[i]
		j = j + 1
print(x)
		

-- EXECUTION TIME:
1.06737
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
